--- a/src/main/resources/com/example/atv2/cadastro-view.fxml
+++ b/src/main/resources/com/example/atv2/cadastro-view.fxml
@@ -1,14 +1,44 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import com.gluonhq.charm.glisten.control.TextField?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="CONTROLLER_NAME"
-            prefHeight="400.0" prefWidth="600.0">
 
+<AnchorPane prefHeight="678.0" prefWidth="788.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="CONTROLLER_NAME">
+   <children>
+      <Label layoutX="172.0" layoutY="208.0" text="Nome" />
+      <Label layoutX="427.0" layoutY="208.0" text="Sobrenome" />
+      <Label layoutX="172.0" layoutY="281.0" text="Cpf" />
+      <Label layoutX="172.0" layoutY="341.0" text="Telefone" />
+      <Label layoutX="172.0" layoutY="407.0" text="Email" />
+      <Label layoutX="172.0" layoutY="463.0" text="Senha" />
+      <TextField layoutX="427.0" layoutY="225.0" prefHeight="26.0" prefWidth="173.0" />
+      <TextField layoutX="172.0" layoutY="299.0" prefHeight="26.0" prefWidth="449.0" />
+      <TextField layoutX="172.0" layoutY="359.0" prefHeight="26.0" prefWidth="449.0" />
+      <TextField layoutX="172.0" layoutY="425.0" prefHeight="26.0" prefWidth="449.0" />
+      <TextField layoutX="172.0" layoutY="225.0" prefHeight="26.0" prefWidth="173.0" />
+      <TextField layoutX="172.0" layoutY="481.0" prefHeight="26.0" prefWidth="449.0" />
+      <Text layoutX="237.0" layoutY="80.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Crie seu cadastro">
+         <font>
+            <Font name="Bell MT" size="45.0" />
+         </font>
+      </Text>
+      <Button layoutX="168.0" layoutY="538.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="82.0" style="-fx-background-color: #c21b98;" text="Cadastrar" />
+      <TextArea layoutX="90.0" layoutY="92.0" prefHeight="76.0" prefWidth="631.0" text="Para ser cliente é necessário preencher corretamente o formulário abaixo com os respectivos&#10; dados cadastrais. Os campos com * são de preenchimento obrigatório e essenciais para realizarmos&#10; o envio do seu futuro pedido.">
+         <font>
+            <Font name="Arial" size="12.0" />
+         </font>
+      </TextArea>
+      <Text layoutX="210.0" layoutY="222.0" strokeType="OUTSIDE" strokeWidth="0.0" text="*" />
+      <Text layoutX="498.0" layoutY="222.0" strokeType="OUTSIDE" strokeWidth="0.0" text="*" />
+      <Text layoutX="195.0" layoutY="295.0" strokeType="OUTSIDE" strokeWidth="0.0" text="*" />
+      <Text layoutX="225.0" layoutY="355.0" strokeType="OUTSIDE" strokeWidth="0.0" text="*" />
+      <Text layoutX="206.0" layoutY="421.0" strokeType="OUTSIDE" strokeWidth="0.0" text="*" />
+      <Text layoutX="213.0" layoutY="477.0" strokeType="OUTSIDE" strokeWidth="0.0" text="*" />
+   </children>
 </AnchorPane>
