--- a/src/main/resources/com/example/atv2/login-view.fxml
+++ b/src/main/resources/com/example/atv2/login-view.fxml
@@ -8,7 +8,6 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="CONTROLLER_NAME">
    <children>
       <AnchorPane prefHeight="400.0" prefWidth="268.0" style="-fx-background-color: #c21b98;">
@@ -26,7 +25,7 @@
       </Text>
       <TextField layoutX="359.0" layoutY="137.0" />
       <TextField layoutX="359.0" layoutY="188.0" />
-      <Text layoutX="311.0" layoutY="154.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Email:" wrappingWidth="37.13671875" />
-      <Text layoutX="311.0" layoutY="205.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Senha:" wrappingWidth="37.13671875" />
+      <Text layoutX="313.0" layoutY="155.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Email:" wrappingWidth="37.13671875" />
+      <Text layoutX="312.0" layoutY="207.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Senha:" wrappingWidth="54.0" />
    </children>
 </AnchorPane>
