--- a/src/main/resources/com/example/atv2/venda-view.fxml
+++ b/src/main/resources/com/example/atv2/venda-view.fxml
@@ -1,14 +1,42 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="CONTROLLER_NAME"
-            prefHeight="400.0" prefWidth="600.0">
 
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="CONTROLLER_NAME">
+   <children>
+      <AnchorPane layoutX="392.0" prefHeight="400.0" prefWidth="208.0" style="-fx-background-color: #f0f4fa;">
+         <children>
+            <Label prefHeight="30.0" prefWidth="208.0" style="-fx-background-color: #c21b98;" text="    Meu carrinho:" textFill="WHITE">
+               <font>
+                  <Font name="Berlin Sans FB" size="21.0" />
+               </font>
+            </Label>
+            <Label layoutX="14.0" layoutY="55.0" text="Meus produtos:" />
+            <ImageView fitHeight="45.0" fitWidth="50.0" layoutX="21.0" layoutY="73.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../../../../../../../roupa1.jpg" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="45.0" fitWidth="50.0" layoutX="76.0" layoutY="73.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../../../../../../../roupa2.jpg" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="45.0" fitWidth="50.0" layoutX="135.0" layoutY="73.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../../../../../../../roupa3.jpg" />
+               </image>
+            </ImageView>
+            <Label layoutX="15.0" layoutY="136.0" prefHeight="17.0" prefWidth="64.0" text="Valor total:" />
+            <Label layoutX="84.0" layoutY="136.0" prefHeight="17.0" prefWidth="100.0" text="xxxxxxxxxx" textFill="#c21b98" />
+            <Button layoutX="131.0" layoutY="200.0" mnemonicParsing="false" style="-fx-background-color: #c21b98;" text="Comprar" textFill="WHITE" />
+         </children>
+      </AnchorPane>
+   </children>
 </AnchorPane>
