--- a/src/main/resources/com/example/atv2/CadClientes-view.fxml
+++ b/src/main/resources/com/example/atv2/CadClientes-view.fxml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.gluonhq.charm.glisten.control.TextField?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<AnchorPane prefHeight="678.0" prefWidth="788.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="CONTROLLER_NAME">
+<AnchorPane fx:id="root" prefHeight="678.0" prefWidth="788.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.atv2.Controllers.cadastroController">
    <children>
       <Label layoutX="172.0" layoutY="208.0" text="Nome" />
       <Label layoutX="427.0" layoutY="208.0" text="Sobrenome" />
@@ -28,8 +27,8 @@
             <Font name="Bell MT" size="45.0" />
          </font>
       </Text>
-      <Button layoutX="168.0" layoutY="538.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="82.0" style="-fx-background-color: #c21b98;" text="Cadastrar" />
-      <TextArea layoutX="90.0" layoutY="92.0" prefHeight="76.0" prefWidth="631.0" text="Para ser cliente é necessário preencher corretamente o formulário abaixo com os respectivos&#10; dados cadastrais. Os campos com * são de preenchimento obrigatório e essenciais para realizarmos&#10; o envio do seu futuro pedido.">
+      <Button layoutX="168.0" layoutY="538.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="82.0" style="-fx-background-color: #c21b98;" text="Cadastrar" textFill="WHITE" />
+      <TextArea layoutX="88.0" layoutY="92.0" prefHeight="76.0" prefWidth="631.0" text="Para ser cliente é necessário preencher corretamente o formulário abaixo com os respectivos&#10; dados cadastrais. Os campos com * são de preenchimento obrigatório e essenciais para realizarmos&#10; o envio do seu futuro pedido.">
          <font>
             <Font name="Arial" size="12.0" />
          </font>
