--- a/src/main/resources/com/example/atv2/login-view.fxml
+++ b/src/main/resources/com/example/atv2/login-view.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="CONTROLLER_NAME">
+<AnchorPane fx:id="root" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.atv2.Controllers.loginController">
    <children>
       <AnchorPane prefHeight="400.0" prefWidth="268.0" style="-fx-background-color: #c21b98;">
          <effect>
