--- a/src/main/resources/com/example/atv2/Produtos-view.fxml
+++ b/src/main/resources/com/example/atv2/Produtos-view.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.VBox?>
 
 
-<AnchorPane fx:id="root" prefHeight="681.0" prefWidth="925.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.atv2.Controllers.produtosController">
+<AnchorPane fx:id="root" prefHeight="681.0" prefWidth="925.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.atv2.controller.produtosController">
    <children>
       <VBox alignment="CENTER_LEFT" layoutX="51.0" layoutY="24.0" prefHeight="143.0" prefWidth="321.0" spacing="10.0">
          <children>
