--- a/src/main/resources/com/example/atv2/login-view.fxml
+++ b/src/main/resources/com/example/atv2/login-view.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="root" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.atv2.Controllers.loginController">
+<AnchorPane fx:id="root" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.atv2.controller.loginController">
    <children>
       <AnchorPane prefHeight="400.0" prefWidth="268.0" style="-fx-background-color: #c21b98;">
          <effect>
@@ -23,8 +23,8 @@
             <Font name="System Italic" size="45.0" />
          </font>
       </Text>
-      <TextField layoutX="359.0" layoutY="137.0" />
-      <TextField layoutX="359.0" layoutY="188.0" />
+      <TextField fx:id="txtEmal" layoutX="359.0" layoutY="137.0" />
+      <TextField fx:id="txtSenha" layoutX="359.0" layoutY="188.0" />
       <Text layoutX="313.0" layoutY="155.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Email:" wrappingWidth="37.13671875" />
       <Text layoutX="312.0" layoutY="207.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Senha:" wrappingWidth="54.0" />
    </children>
