--- a/src/main/resources/com/example/atv2/relatorio-view.fxml
+++ b/src/main/resources/com/example/atv2/relatorio-view.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.text.Font?>
 
 
-<AnchorPane prefHeight="401.0" prefWidth="594.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.atv2.Controllers.relatorioController">
+<AnchorPane prefHeight="401.0" prefWidth="594.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.atv2.controller.relatorioController">
    <children>
       <TableView layoutX="3.0" layoutY="192.0" prefHeight="209.0" prefWidth="682.0">
         <columns>
