--- a/src/main/resources/com/example/atv2/Produtos-view.fxml
+++ b/src/main/resources/com/example/atv2/Produtos-view.fxml
@@ -2,78 +2,37 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Menu?>
-<?import javafx.scene.control.MenuBar?>
-<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-
-<AnchorPane fx:id="root" prefHeight="681.0" prefWidth="925.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.atv2.controller.produtosController">
+<AnchorPane fx:id="root" prefHeight="309.0" prefWidth="388.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.atv2.controller.produtosController">
    <children>
-      <VBox alignment="CENTER_LEFT" layoutX="51.0" layoutY="24.0" prefHeight="143.0" prefWidth="321.0" spacing="10.0">
+      <VBox alignment="CENTER_LEFT" layoutX="14.0" layoutY="72.0" prefHeight="196.0" prefWidth="213.0" spacing="10.0">
          <children>
             <Label text="Nome do produto:" />
-            <TextField />
-            <Label text="Código do produto:" />
-            <TextField />
-            <Label text="Valor do produto:" />
-            <TextField />
-            <Label text="Marca:" />
-            <TextField />
-            <Label text="Descrição:" />
-            <TextField />
+            <TextField fx:id="txtNome" />
+            <Label text="Preço do produto: " />
+            <TextField fx:id="txtPreco" />
          </children>
          <padding>
             <Insets bottom="20.0" left="20.0" right="20.0" />
          </padding>
       </VBox>
-      <VBox alignment="CENTER_LEFT" layoutX="505.0" layoutY="24.0" prefHeight="143.0" prefWidth="321.0" spacing="10.0">
-         <children>
-            <Label text="Data de compra:" />
-            <TextField />
-            <Label text="Forncedor:" />
-            <TextField />
-            <Label text="Valor de venda:" />
-            <TextField />
-            <Label text="Categoria:" />
-            <TextField />
-            <Label text="Prateleira:" />
-            <TextField />
-         </children>
-         <padding>
-            <Insets bottom="20.0" left="20.0" right="20.0" />
-         </padding>
-      </VBox>
-      <TableView layoutX="116.0" layoutY="354.0" prefHeight="315.0" prefWidth="692.0">
+      <TableView fx:id="tabelaProdutos" layoutX="227.0" layoutY="72.0" prefHeight="196.0" prefWidth="296.0">
         <columns>
-          <TableColumn prefWidth="75.0" text="Nome" />
-          <TableColumn prefWidth="75.0" text="Marca" />
-            <TableColumn prefWidth="75.0" text="Data de compra" />
-            <TableColumn prefWidth="75.0" text="Valor de venda" />
-            <TableColumn prefWidth="75.0" text="Categoria" />
-            <TableColumn prefWidth="75.0" text="Descrição" />
-            <TableColumn prefWidth="75.0" text="Fornecedor" />
-            <TableColumn prefWidth="75.0" text="Prateleira" />
-            <TableColumn prefWidth="75.0" text="Quantidade" />
+          <TableColumn fx:id="colId" prefWidth="75.0" text="Id" />
+          <TableColumn fx:id="colNome" minWidth="0.0" prefWidth="75.0" text="Nome" />
+            <TableColumn fx:id="colPreco" prefWidth="148.0" text="Preço" />
         </columns>
       </TableView>
-      <MenuBar layoutY="-2.0" prefHeight="26.0" prefWidth="925.0">
-        <menus>
-          <Menu mnemonicParsing="false" text="Home">
-            <items>
-              <MenuItem mnemonicParsing="false" text="Close" />
-            </items>
-          </Menu>
-          <Menu mnemonicParsing="false" text="Ajuda">
-            <items>
-              <MenuItem mnemonicParsing="false" text="About" />
-            </items>
-          </Menu>
-        </menus>
-      </MenuBar>
+      <Label layoutY="-2.0" prefHeight="25.0" prefWidth="525.0" style="-fx-background-color: #c21b98;" text="Tela de Produtos" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
