--- a/src/main/resources/com/example/atv2/login-view.fxml
+++ b/src/main/resources/com/example/atv2/login-view.fxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.gluonhq.charm.glisten.control.TextField?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Hyperlink?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.effect.BoxBlur?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
@@ -15,15 +15,15 @@
             <BoxBlur width="0.0" />
          </effect>
       </AnchorPane>
-      <Button layoutX="352.0" layoutY="267.0" mnemonicParsing="false" style="-fx-background-color: #c21b98;" text="Limpar" textFill="WHITE" />
-      <Button layoutX="463.0" layoutY="267.0" mnemonicParsing="false" style="-fx-background-color: #c21b98;" text="Entrar" textFill="WHITE" />
+      <Button layoutX="352.0" layoutY="267.0" mnemonicParsing="false" onAction="#limparCampos" style="-fx-background-color: #c21b98;" text="Limpar" textFill="WHITE" />
+      <Button layoutX="463.0" layoutY="267.0" mnemonicParsing="false" onAction="#entrar" style="-fx-background-color: #c21b98;" text="Entrar" textFill="WHITE" />
       <Hyperlink layoutX="379.0" layoutY="344.0" text="esqueceu a senha?" />
       <Text fill="#c21b98" layoutX="380.0" layoutY="92.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Login" textAlignment="CENTER">
          <font>
             <Font name="System Italic" size="45.0" />
          </font>
       </Text>
-      <TextField fx:id="txtEmal" layoutX="359.0" layoutY="137.0" />
+      <TextField fx:id="txtEmail" layoutX="359.0" layoutY="137.0" />
       <TextField fx:id="txtSenha" layoutX="359.0" layoutY="188.0" />
       <Text layoutX="313.0" layoutY="155.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Email:" wrappingWidth="37.13671875" />
       <Text layoutX="312.0" layoutY="207.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Senha:" wrappingWidth="54.0" />
