--- a/src/main/resources/com/example/atv2/principal-view.fxml
+++ b/src/main/resources/com/example/atv2/principal-view.fxml
@@ -1,58 +1,54 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0"
-            style="-fx-background-color: #c21b98;"
-            xmlns="http://javafx.com/javafx/25"
-            xmlns:fx="http://javafx.com/fxml/1">
-
+<StackPane prefHeight="600.0" prefWidth="1000.0" style="-fx-background-color: #555555;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
     <children>
-        <VBox alignment="CENTER" spacing="20.0"
-              AnchorPane.topAnchor="0.0"
-              AnchorPane.bottomAnchor="0.0"
-              AnchorPane.leftAnchor="0.0"
-              AnchorPane.rightAnchor="0.0">
+        <VBox alignment="CENTER" maxHeight="400.0" maxWidth="600.0" spacing="20.0" style="-fx-background-color: #C1218F;">
+            <children>
 
-            <Label text="Bem-vindo a Nishe"
-                   textFill="WHITE">
-                <font>
-                    <Font name="Corbel Italic" size="44.0"/>
-                </font>
-            </Label>
+                <Label text="Bem-vindo a Nishe" textFill="WHITE">
+                    <font>
+                        <Font name="System Italic" size="36.0" />
+                    </font>
+                    <VBox.margin>
+                        <Insets bottom="10.0" />
+                    </VBox.margin>
+                </Label>
 
-            <Button text="Home"
-                    prefWidth="200.0"
-                    textFill="WHITE"
-                    style="-fx-background-color: transparent; -fx-border-color: white; -fx-border-width: 2;">
-                <font>
-                    <Font size="20.0"/>
-                </font>
-            </Button>
+                <Button mnemonicParsing="false" prefHeight="45.0" prefWidth="200.0"
+                        style="-fx-background-color: transparent; -fx-border-color: white; -fx-border-width: 2;"
+                        text="Home" textFill="WHITE">
+                    <font>
+                        <Font size="16.0" />
+                    </font>
+                </Button>
 
-            <Button text="Produtos"
-                    prefWidth="200.0"
-                    textFill="WHITE"
-                    style="-fx-background-color: transparent; -fx-border-color: white; -fx-border-width: 2;">
-                <font>
-                    <Font size="20.0"/>
-                </font>
-            </Button>
+                <Button mnemonicParsing="false" prefHeight="45.0" prefWidth="200.0"
+                        style="-fx-background-color: transparent; -fx-border-color: white; -fx-border-width: 2;"
+                        text="Produtos" textFill="WHITE">
+                    <font>
+                        <Font size="16.0" />
+                    </font>
+                </Button>
 
-            <Button text="Sair"
-                    prefWidth="200.0"
-                    textFill="WHITE"
-                    style="-fx-background-color: transparent; -fx-border-color: white; -fx-border-width: 2;">
-                <font>
-                    <Font size="20.0"/>
-                </font>
-            </Button>
+                <Button mnemonicParsing="false" prefHeight="45.0" prefWidth="200.0"
+                        style="-fx-background-color: transparent; -fx-border-color: white; -fx-border-width: 2;"
+                        text="Sair" textFill="WHITE">
+                    <font>
+                        <Font size="16.0" />
+                    </font>
+                </Button>
 
+            </children>
+            <padding>
+                <Insets bottom="40.0" left="40.0" right="40.0" top="40.0" />
+            </padding>
         </VBox>
     </children>
-</AnchorPane>
-
+</StackPane>
