--- a/src/main/resources/com/example/atv2/Produtos-view.fxml
+++ b/src/main/resources/com/example/atv2/Produtos-view.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -17,6 +18,7 @@
             <TextField fx:id="txtNome" />
             <Label text="Preço do produto: " />
             <TextField fx:id="txtPreco" />
+            <Button mnemonicParsing="false" onAction="#salvarProduto" style="-fx-background-color: #c21b98;" text="Salvar" textFill="WHITE" />
          </children>
          <padding>
             <Insets bottom="20.0" left="20.0" right="20.0" />
