--- a/src/main/resources/com/example/atv2/venda-view.fxml
+++ b/src/main/resources/com/example/atv2/venda-view.fxml
@@ -7,72 +7,55 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane fx:id="root" prefHeight="528.0" prefWidth="815.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.atv2.controller.vendaController">
    <children>
-      <Pane layoutX="14.0" layoutY="66.0" prefHeight="119.0" prefWidth="359.0">
-         <children>
-            <Label layoutX="14.0" layoutY="14.0" text="Informaçẽs da conta:">
-               <font>
-                  <Font size="15.0" />
-               </font></Label>
-            <Label layoutX="25.0" layoutY="51.0" text="Cpf:" />
-            <Label layoutX="191.0" layoutY="51.0" text="Data:" />
-            <Label layoutX="14.0" layoutY="88.0" text="Nome:" />
-            <TextField layoutX="50.0" layoutY="47.0" prefHeight="25.0" prefWidth="129.0" />
-            <TextField layoutX="50.0" layoutY="84.0" prefHeight="25.0" prefWidth="129.0" />
-            <TextField layoutX="224.0" layoutY="47.0" prefHeight="25.0" prefWidth="129.0" />
-         </children>
-      </Pane>
       <Label prefHeight="41.0" prefWidth="931.0" style="-fx-background-color: #c21b98;" text="Tela de Vendas" textAlignment="CENTER" textFill="WHITE">
          <font>
             <Font name="Arial Black" size="26.0" />
          </font>
       </Label>
-      <Pane layoutX="21.0" layoutY="255.0" prefHeight="259.0" prefWidth="359.0">
+      <Pane layoutX="412.0" layoutY="66.0" prefHeight="459.0" prefWidth="519.0">
          <children>
-            <Label layoutX="14.0" layoutY="14.0" text="Produto:">
+            <Label layoutX="1.0" layoutY="-2.0" prefHeight="39.0" prefWidth="519.0" style="-fx-background-color: #c21b98;" text="Vendas" textFill="WHITE">
                <font>
-                  <Font size="15.0" />
+                  <Font name="System Bold" size="27.0" />
                </font>
             </Label>
-            <Label layoutX="14.0" layoutY="51.0" text="Código:" />
-            <Label layoutX="7.0" layoutY="171.0" text="Preço:" />
-            <Label layoutX="14.0" layoutY="101.0" text="Produto:" />
-            <TextField layoutX="60.0" layoutY="47.0" prefHeight="25.0" prefWidth="129.0" />
-            <TextField layoutX="63.0" layoutY="97.0" prefHeight="25.0" prefWidth="129.0" />
-            <TextField layoutX="40.0" layoutY="167.0" prefHeight="25.0" prefWidth="129.0" />
-            <Button layoutX="201.0" layoutY="47.0" mnemonicParsing="false" style="-fx-background-color: #c21b98;" text="Pesquisar" textFill="WHITE" />
-            <Label layoutX="175.0" layoutY="171.0" text="Qtd:" />
-            <TextField layoutX="202.0" layoutY="167.0" prefHeight="25.0" prefWidth="129.0" />
-         </children>
-      </Pane>
-      <Pane layoutX="413.0" layoutY="66.0" prefHeight="306.0" prefWidth="384.0">
-         <children>
-            <Label layoutX="1.0" layoutY="-2.0" text="Carrinho:">
-               <font>
-                  <Font size="27.0" />
-               </font>
-            </Label>
-            <TableView layoutX="1.0" layoutY="33.0" prefHeight="273.0" prefWidth="382.0">
+            <TableView fx:id="tabelaProdutos" layoutX="1.0" layoutY="33.0" prefHeight="425.0" prefWidth="519.0">
               <columns>
-                <TableColumn prefWidth="75.0" text="Código" />
-                  <TableColumn prefWidth="75.0" text="Produto" />
-                  <TableColumn prefWidth="75.0" text="Qtd" />
-                  <TableColumn prefWidth="75.0" text="Preço" />
-                  <TableColumn prefWidth="75.0" text="Subtotal" />
+                <TableColumn fx:id="colId" prefWidth="75.0" text="ID" />
+                  <TableColumn fx:id="colNome" prefWidth="144.0" text="Produto" />
+                  <TableColumn fx:id="colQtd" prefWidth="122.0" text="Qtd" />
+                  <TableColumn fx:id="colPreco" prefWidth="177.0" text="Preço" />
               </columns>
             </TableView>
          </children>
       </Pane>
-      <Button layoutX="731.0" layoutY="472.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="66.0" style="-fx-background-color: #c21b98;" text="Cancelar" textFill="WHITE" />
-      <Button layoutX="616.0" layoutY="472.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="86.0" style="-fx-background-color: #c21b98;" text="Pagamento" textFill="WHITE" />
-      <Label layoutX="444.0" layoutY="399.0" prefHeight="25.0" prefWidth="77.0" text="Valor total:">
-         <font>
-            <Font size="15.0" />
-         </font>
-      </Label>
-      <TextField layoutX="521.0" layoutY="399.0" />
+      <Button layoutX="100.0" layoutY="331.0" mnemonicParsing="false" onAction="#salvarVenda" prefHeight="35.0" prefWidth="86.0" style="-fx-background-color: #c21b98;" text="Salvar" textFill="WHITE" />
+      <VBox layoutX="100.0" layoutY="132.0" prefHeight="173.0" prefWidth="247.0">
+         <children>
+            <Label prefHeight="25.0" prefWidth="101.0" text="Nome o produto:">
+               <font>
+                  <Font size="13.0" />
+               </font>
+            </Label>
+            <TextField fx:id="txtNome" />
+            <Label prefHeight="25.0" prefWidth="37.0" text="Preço:">
+               <font>
+                  <Font size="13.0" />
+               </font>
+            </Label>
+            <TextField fx:id="txtPreco" />
+            <Label prefHeight="25.0" prefWidth="30.0" text="Qtd:">
+               <font>
+                  <Font size="13.0" />
+               </font>
+            </Label>
+            <TextField fx:id="txtQtd" />
+         </children>
+      </VBox>
    </children>
 </AnchorPane>
